--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <style>
       body {
-        background: #FF5733;
+        background: red;
         font-family: sans-serif;
         color: blue;
         }
@@ -12,6 +12,7 @@
         </head>
         <body>
         <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
+        <font face="verdana" color="green">This is some text!</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
        </body>
