--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
 <html>
   <head>
     <style>
-      body {
-        background: red;
-        font-family: sans-serif;
-        color: blue;
+    
+      html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            width: 100%;
         }
+
+        body {
+            display: table;
+            background: red;
+            font-family: sans-serif;
+            color: blue;
+        }
+
+        .my-block {
+            text-align: center;
+            display: table-cell;
+            vertical-align: middle;
+        }
+      
         </style>
         </head>
         <body>
+         <div class="my-block">
+       Hi!<br />
+       Welcome to my Index of Every Game i've ever made.
+    </div>
         <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
         <font face="verdana" color="green">This is some text!</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
