--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </style>
         </head>
         <body>
-         <div class="my-block">
+         ///<div class="my-block">
        Hi!<br />
        Welcome to my Index of Every Game i've ever made.
     </div>
