--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
         </style>
         </head>
         <body>
-         ///<div class="my-block">
-       Hi!<br />
-       Welcome to my Index of Every Game i've ever made.
-    </div>
+         
         <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
-        <font face="verdana" color="green">This is some text!</font>
+        <font face="verdana" color="green">They may not be good but...</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
+        <a href="https://drakealexander.github.io/pong/">Pong</a>  
+          
        </body>
        </html>
