--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
         <body>
          
         <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
-        <font face="verdana" color="green">They may not be good but...</font>
+        <font face="verdana" color="green">They is my very best things i've made.</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
         <a href="https://drakealexander.github.io/pong/">Pong</a>  
+        <a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toes</a> 
+        <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
+        <a href="https://drakealexander.github.io/slide/">Sliding Puzzle</a>  
+        <a href="https://drakealexander.github.io/snake/">Snake</a>  
+        <a href="https://drakealexander.github.io/bubshot/">Bubble Shooter</a>
+        <a href="https://drakealexander.github.io/newcalc/">Calculator</a>  
+        <a href="https://drakealexander.github.io/platformer/">Platformer</a>
+        <a href="https://drakealexander.github.io/solitaire/">Solitaire</a>  
+        <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
+        <h6>Did you see all of them? How did you like it? PLease contact me for any reason my email is in my github :)</h6>
           
        </body>
        </html>
