--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         body {
             display: table;
-            background: red;
+            background: black;
             font-family: sans-serif;
-            color: blue;
+            color: white;
         }
 
         .my-block {
