--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>I dont even play Solitaire why did i make this?</p>
         <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
         <p>Ah, the classic mindsweeper, a classic.</p>
-        <h5>Did you see all of them? How did you like it? PLease contact me for any reason my email is in my github :)</h6>
+        <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github :)</b></h6>
         
           
        </body>
