--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
         <p>Ah, the classic mindsweeper, a classic.</p>
         <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github :)</b></h6>
-        <font face="comic-sans" color="red">I'm only in 9th grade but i'm trying to manage school and coding.</font>
+        <font face="arial" color="red">I'm only in 9th grade but i'm trying to manage school and coding.</font>
           
        </body>
        </html>
