--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <body>
          
         <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
-        <font face="verdana" color="green">They is my very best things i've made.</font>
+        <font face="helvetica" color="blue">These are the very best things i've made.</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
         <p>Personal favorite right here, Asteroids was actually very hard to make and i needed a lot of help</p>
