--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </head>
         <body>
          
-        <h1>Hi! Welcome to my Index of Everygame ive ever made.</h1>
+        <h1>Hi! Welcome to my Index of Everygame i've ever made.</h1>
         <font face="helvetica" color="blue">These are the very best things i've made.</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
