--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
          
         <h1>Hi! Welcome to my Index of Everygame i've ever made.</h1>
         <font face="helvetica" color="blue">These are the very best things i've made.</font>
+        <font face="arial" color="red">My name is Drake Griffith. Im 14 and only in 9th grade but i'm trying to manage school and coding.</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
         <p>Personal favorite right here, Asteroids was actually very hard to make and i needed a lot of help</p>
@@ -52,7 +53,7 @@
         <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
         <p>Ah, the classic mindsweeper, a classic.</p>
         <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github :)</b></h6>
-        <font face="arial" color="red">I'm only in 9th grade but i'm trying to manage school and coding.</font>
+
           
        </body>
        </html>
