--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <body>
          
         <h1>Hi! Welcome to my Index of Everygame i've ever made.</h1>
-        <font face="helvetica" color="blue">These are the very best things i've made.</font>
+        <font face="helvetica" color="green">These are the very best things i've made.</font>
         <font face="arial" color="red">My name is Drake Griffith. Im 14 and only in 9th grade but i'm trying to manage school and coding.</font>
         <h2> Below is every attraction ive ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
