--- a/clicker.html
+++ b/clicker.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-	<title>Basic Clicker</title>
-</head>
-<body>
-	<p>Hi</p>
-</body>
-</html>
+  <head>
+	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="color_background.js"></script>
+    <style>
+
+      html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
+
+        body {
+            display: table;
+	    background:black;
+            font-family: sans-serif;
+            color: white;
+        }
+
+        .my-block {
+            text-align: center;
+            display: table-cell;
+            vertical-align: middle;
+        }
+
+
+
+        </style>
+        </head>
+        <body>
+
+
+        <h1>Hi! Welcome to my Index of Everygame i've ever made.</h1>
+        <font face="helvetica" color="green">These are the very best things i've made.</font>
+        <font face="arial" color="red">My name is Drake Griffith. Im 14 and only in 9th grade but i'm trying to manage school and coding.</font>
+        <h2> Below is every attraction ive ever made, have fun!</h2>
+        <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
+        <p>Personal favorite right here, Asteroids was actually very hard to make and i needed a lot of help.</p>
+        <a href="https://drakealexander.github.io/pong/">Pong</a>
+        <p>Made Pong down in Oak Island NC when i was bored waiting for the Thanksgiving meal to be ready.</p>
+        <a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toes</a>
+        <p>I dont know why i wasted so much time and energy into this...</p>
+        <a href="https://drakealexander.github.io/slide/">Sliding Puzzle</a>
+        <p>If you're wondering how to play this, just try to get the numbers in order 1- how ever many you're playing to.</p>
+        <a href="https://drakealexander.github.io/snake/">Snake</a>
+        <p>One of the first things i made in HTML. Pretty basic.</p>
+        <a href="https://drakealexander.github.io/bubshot/">Bubble Shooter</a>
+        <p>Like those apps on our phone we all used to play the ones where you shoot certain colors at the bubbles with the same color. Yea like that.</p>
+        <a href="https://drakealexander.github.io/newcalc/">Calculator</a>
+        <p>Eh, needed to get through Geometry somehow, why not make my own Calculator.</p>
+        <a href="https://drakealexander.github.io/platformer/">Platformer</a>
+        <p>Everyone loves a platformer, right?</p>
+        <a href="https://drakealexander.github.io/solitaire/">Solitaire</a>
+        <p>I dont even play Solitaire why did i make this?</p>
+        <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
+        <p>Ah, the classic mindsweeper, a classic.</p>
+        <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github.</b></h6>
+
+
+       </body>
+       </html>
