--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <p>I dont even play Solitaire why did i make this?</p>
         <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
         <p>Ah, the classic mindsweeper, a classic.</p>
+	<a href="https://drakealexander.github.io/dodge/">Dodger</a>
+	<p>Dodge Game, try not to hit the fire!</p>
+	<a href="https://drakealexander.github.io/click/">Clicker</a>
+	<p>Offbrand Cookie Clicker game. Very basic but fun at the same time.</p>
+	 
+	 
         <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github.</b></h6>
 	</body>
        </html>
