--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 	</style>
   </head>
    <body>
-	<h1>Hi! Welcome to my Index of Everygame i've ever made.</h1>
-        <font face="helvetica" color="green">These are the very best things i've made.</font>
-        <font face="arial" color="red">My name is Drake Griffith. Im 14 and only in 9th grade but i'm trying to manage school and coding.</font>
-        <h2> Below is every attraction ive ever made, have fun!</h2>
+	<h1>Hi! Welcome to my Index of Everygame I've ever made.</h1>
+        <font face="helvetica" color="green">These are the very best things I've made.</font>
+        <font face="arial" color="red">My name is Drake Griffith. I'm 14 and only in 9th grade, but I'm trying to manage school and coding.</font>
+        <h2> Below is every attraction I've ever made, have fun!</h2>
         <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
-        <p>Personal favorite right here, Asteroids was actually very hard to make and i needed a lot of help.</p>
+        <p>Personal favorite right here, Asteroids was actually very hard to make, and I needed a lot of help.</p>
         <a href="https://drakealexander.github.io/pong/">Pong</a>
-        <p>Made Pong down in Oak Island NC when i was bored waiting for the Thanksgiving meal to be ready.</p>
+        <p>Made Pong down in Oak Island NC when I was bored waiting for the Thanksgiving meal to be ready.</p>
         <a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toes</a>
-        <p>I dont know why i wasted so much time and energy into this...</p>
+        <p>I dont know why I wasted so much time and energy into this...</p>
         <a href="https://drakealexander.github.io/slide/">Sliding Puzzle</a>
         <p>If you're wondering how to play this, just try to get the numbers in order 1- how ever many you're playing to.</p>
         <a href="https://drakealexander.github.io/snake/">Snake</a>
-        <p>One of the first things i made in HTML. Pretty basic.</p>
+        <p>One of the first things I made in HTML. Pretty basic.</p>
         <a href="https://drakealexander.github.io/bubshot/">Bubble Shooter</a>
-        <p>Like those apps on our phone we all used to play the ones where you shoot certain colors at the bubbles with the same color. Yea like that.</p>
+        <p>Like those apps on our phone we all used to play the ones where you shoot certain colors at the bubbles with the same color. Yes like that.</p>
         <a href="https://drakealexander.github.io/newcalc/">Calculator</a>
-        <p>Eh, needed to get through Geometry somehow, why not make my own Calculator.</p>
+        <p>Eh, needed to get through Geometry somehow, why not make my own Calculator?</p>
         <a href="https://drakealexander.github.io/platformer/">Platformer</a>
         <p>Everyone loves a platformer, right?</p>
         <a href="https://drakealexander.github.io/solitaire/">Solitaire</a>
@@ -49,6 +49,6 @@
 	<p>???</p>
 	 
 	 
-        <h5><b>Did you see all of them? How did you like it? Please contact me for any reason my email is in my github.</b></h6>
+        <h5><b>Did you see all of them? How did you like it? Please contact me for any reason. My email is in my github.</b></h6>
 	</body>
        </html>
