--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</style>
   </head>
    <body>
-	<h1>Hi! Welcome to my Index of Everygame I've ever made.</h1>
+	<h1>Hi! Welcome to my Index of every game I've ever made.</h1>
         <font face="helvetica" color="green">These are the very best things I've made.</font>
         <font face="arial" color="red">My name is Drake Griffith. I'm 14 and only in 9th grade, but I'm trying to manage school and coding.</font>
         <h2> Below is every attraction I've ever made, have fun!</h2>
