--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="color_background.js"></script>
 	
-</head>
-	  <style>
 
-   
-        body {
-            display: table;
-	    background:black;
-            font-family: sans-serif;
-            color: white;
-        }
-
-      
-
-	</style>
+	 
   </head>
    <body>
+	   <div id="backgroundContainer"></div>
 	<h1>Hi! Welcome to my Index of every game I've ever made.</h1>
         <font face="helvetica" color="green">These are the very best things I've made.</font>
         <font face="arial" color="red">My name is Drake Griffith. I'm 14 and only in 9th grade, but I'm trying to manage school and coding.</font>
