--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
   <head>
 	  
-	<title>Clicker</title>
-	<link rel="stylesheet" type="text/css" href="clicker.css">
+	<title>My Website</title>
+	<link rel="stylesheet" type="text/css" href="drakegriffith8">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="color_background.js"></script>
 	
