--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 	  
 	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="drake.js">
+	<link rel="stylesheet" type="text/css" href="drake.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="color_background.js"></script>
 	
