--- a/index.html
+++ b/index.html
@@ -1,50 +1,25 @@
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html>
-  <head>
-	  
-	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="drake.css">
+<head>
+	<title>Clicker</title>
+	<link rel="stylesheet" type="text/css" href="clicker.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="color_background.js"></script>
-	
-
-	 
-  </head>
-   <body>
-	   <div id="backgroundContainer"></div>
-	<h1>Hi! Welcome to my Index of every game I've ever made.</h1>
-        <font face="helvetica" color="green">These are the very best things I've made.</font>
-        <font face="arial" color="red">My name is Drake Griffith. I'm 14 and only in 9th grade, but I'm trying to manage school and coding.</font>
-        <h2> Below is every attraction I've ever made, have fun!</h2>
-        <a href="https://drakealexander.github.io/asteroids/">Asteroids</a>
-        <p>Personal favorite right here, Asteroids was actually very hard to make, and I needed a lot of help.</p>
-        <a href="https://drakealexander.github.io/pong/">Pong</a>
-        <p>Made Pong down in Oak Island NC when I was bored waiting for the Thanksgiving meal to be ready.</p>
-        <a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toes</a>
-        <p>I dont know why I wasted so much time and energy into this...</p>
-        <a href="https://drakealexander.github.io/slide/">Sliding Puzzle</a>
-        <p>If you're wondering how to play this, just try to get the numbers in order 1- how ever many you're playing to.</p>
-        <a href="https://drakealexander.github.io/snake/">Snake</a>
-        <p>One of the first things I made in HTML. Pretty basic.</p>
-        <a href="https://drakealexander.github.io/bubshot/">Bubble Shooter</a>
-        <p>Like those apps on our phone we all used to play the ones where you shoot certain colors at the bubbles with the same color. Yes like that.</p>
-        <a href="https://drakealexander.github.io/newcalc/">Calculator</a>
-        <p>Eh, needed to get through Geometry somehow, why not make my own Calculator?</p>
-        <a href="https://drakealexander.github.io/platformer/">Platformer</a>
-        <p>Everyone loves a platformer, right?</p>
-        <a href="https://drakealexander.github.io/solitaire/">Solitaire</a>
-        <p>I dont even play Solitaire why did i make this?</p>
-        <a href="https://drakealexander.github.io/mindsweeper/">Mindsweeper</a>
-        <p>Ah, the classic mindsweeper, a classic.</p>
-	<a href="https://drakealexander.github.io/dodge/">Dodger</a>
-	<p>Dodge Game, try not to hit the fire!</p>
-	<a href="https://drakealexander.github.io/click/">Clicker</a>
-	<p>Offbrand Cookie Clicker game. Very basic but fun at the same time.</p>
-	<a href="https://drakealexander.github.io/blockade/">Breakout</a>
-	<p>???</p>
-	 
-	 
-        <h5><b>Did you see all of them? How did you like it? Please contact me for any reason. My email is in my github.</b></h6>
-	</body>
-       </html>
+	<script type="text/javascript" src="money_manager.js"></script>
+</head>
+<body>
+	<div id="backgroundContainer"></div>
+	<div id="header">
+		<p>$<span id="money">0.00</span></p>
+	</div>
+	<div id="container">
+		<div id="button">
+			<p>Click me for $<span id="clickPower">1</span></p>
+		</div>
+		<div id="upgrade">
+			<p>Increase Income for $<span id="productionCost">10</span></p>
+		</div>
+	</div>
+</body>
+</html>
