--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 	<title>Clicker</title>
-	<link rel="stylesheet" type="text/css" href="clicker.css">
+	<link rel="stylesheet" type="text/css" href="drake.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="color_background.js"></script>
-	<script type="text/javascript" src="money_manager.js"></script>
+	
 </head>
 <body>
 	<div id="backgroundContainer"></div>
