--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Clicker</title>
 	<link rel="stylesheet" type="text/css" href="drake.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="color_background.js"></script>
+	<script type="text/javascript" src="colorbg.js"></script>
 	
 </head>
 <body>
