--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 	
 </head>
 <body>
+	<div id="backgroundContainer"></div>
+	<div id="header">
+	
+	</div>
+	<div id="container">
+		<div id="button">
+		
+		</div>
+		<div id="upgrade">
+			
+		</div>
+	</div>
 	
 </body>
 </html>
