--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   </head>
 
   <body>
-<div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
-<div class="content">
-  <h1>Sliding Diagonals Background Effect</h1>
-</div>
+<x-graph numbers="30" style="--size:80vh;"></x-graph>
+
 </body>
 </html>
