--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en"
-<head>
-  <title>Drake's Website</title>
-  </head>
-
-  <body>
-<x-graph numbers="30" style="--size:80vh;"></x-graph>
-
-</body>
+<html>
+    <head>
+        <title>Twinkling Night Sky</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="stars"></div>
+        <div class="twinkling"></div> 
+       <div class="clouds"></div>
+       <div class="title">
+        <h1>A Dark and Mysterious Night</h1>
+       </div>
+    </body>
 </html>
