--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Repositories</title>
+        <title>Drake's Website</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -9,7 +9,7 @@
         <div class="twinkling"></div> 
        <div class="clouds"></div>
        <div class="title">
-        <h1>Welcome to my Page!</h1>
+        <p>Welcome to my Page!</p>
        </div>
     </body>
 </html>
