--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="twinkling"></div> 
        <div class="clouds"></div>
        <div class="title">
-        <p>Welcome to my Page!</p>
+        <h1>Welcome to my Page!</h1>
        </div>
     </body>
 </html>
