--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        <div class="clouds"></div>
        <div class="title">
         <h1>Welcome to my Page!</h1>
+           <h1>Here is where all of my Github Projects from 2012-Present will go</h1>
        </div>
     </body>
 </html>
