--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
        <div class="title">
         <h1>Welcome to my Page!</h1>
         <h1>Here is where all of my Github Projects from 2012-Present will go</h1>
+          
        </div>
+        
     </body>
+     <p class = "s1-text center-block">Hello</p>
 </html>
