--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
        </div>
         
     </body>
-         <p class = "Copyrighted by Drake Griffith.">Hello</p>
+         <p class = "© Drake Griffith.">Hello</p>
 </html>
