--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
        <div class="title">
         <h1>Welcome to my Page!</h1>
         <h1>Here is where all of my Github Projects from 2012-Present will go</h1>
-               <p class = "s1-text center-block">Hello</p>
+               <h1 class = "s1-text center-block">Hello</h1>
        </div>
         
     </body>
-         <p class = "© Drake Griffith.">Hello</p>
+         <p class = "s1-text center block">© Drake Griffith.</p>
 </html>
