--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div class="title">
         <h1>Welcome to my Page!</h1>
         <h1>Here is where all of my Github Projects from 2012-Present will go</h1>
-               <h1 class = "s1-text center-block">Hello</h1>
+               <h1>Hello</h1>
        </div>
         
     </body>
