--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="twinkling"></div> 
        <div class="clouds"></div>
        <div class="title">
-        <h1>Welcome to my Page!</h1>
-        <h1>Here is where all of my Github Projects from 2012-Present will go</h1>
+        <h1>Github Repository Space</h1>
+        <h1>Scroll Down</h1>
            
        </div>
         
