--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ Androids
 </div>
 
 
-//*<form action="/action_page.php">
+<!--<form action="/action_page.php">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname"><br><br>
   <input type="submit" value="Submit">
-</form>*//
+</form>-->
 
 
 
