--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <div class="clouds"></div>
        <div class="title">
         <h1>Drake's Github Repository Space</h1>
-        <h1>Scroll Down</h1>
+        <h1>Scroll Down (Computer Only)</h1>
            
        </div>
         
