--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <p style="font-family:Helvetica, sans-serif">Thank you for visiting my page! My name is Christopher Drake Alexander Griffith. I am seventeen years old and am a senior at Cannon School in NC. At a very young age, I become very fond of programming and started in Python. In the past ten years, I have learned many other programming languages including JavaScript, HTML, CSS, Golang, Ruby, and Gamemaker. Starting to code from a young age has been extremely beneficial because I have acquired as much programming knowledge as the average computer science college student has. Now, I am ahead of the game and am preparing myself for success. I believe it is critical for more people to learn and understand programming as our world quickly becomes technologically dependent. A basic understanding of coding will be essential in order to adapt successfully. This site holds all of my HTML, CSS, and Javascript games.</p>
 <br></br>
     
-<div class="fixed">
+--!><div class="fixed">
 Androids
-</div>
+</div><--
 
 <br><br><br><br><br><br><br><br><br><br></br>
 <form action="/action_page.php">
