--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 <!--<div class="fixed">
 Androids
 </div>-->
-
+<a href="https://drakealexander.github.io/asteroids/">Androids</a><br></br>
+<a href="https://drakealexander.github.io/platformer/">Platformer</a><br></br>
+<a href="https://drakealexander.github.io/click/">Click</a><br></br>
+<a href="https://drakealexander.github.io/snake/">Snake</a><br></br>
+<a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toe</a><br></br>
+<a href="https://drakealexander.github.io/pong/">Pong</a><br></br>
+<a href="https://drakealexander.github.io/dodge/">Dodge</a><br></br>
 <br><br><br><br><br><br><br><br><br><br></br>
 <form action="/action_page.php">
   <label for="fname">First name:</label>
