--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ Androids
 <a href="https://drakealexander.github.io/pong/">Pong</a><br></br>
 <a href="https://drakealexander.github.io/dodge/">Dodge</a><br></br>
 <br><br><br><br><br><br><br><br><br><br></br>
-<form action="/action_page.php">
+<!--form action="/action_page.php">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname"><br><br>
   <input type="submit" value="Submit">
-</form>
+</form>-->
 
 
 
