--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ Androids
 <a href="https://drakealexander.github.io/newtictactoe/">Tic Tac Toe</a><br></br>
 <a href="https://drakealexander.github.io/pong/">Pong</a><br></br>
 <a href="https://drakealexander.github.io/dodge/">Dodge</a><br></br>
+<a href="https://drakealexander.github.io/slide/">Slider</a><br></br>
+<a href="https://drakealexander.github.io/blockade/">Blockade</a><br></br>
 <br><br><br><br><br><br><br><br><br><br></br>
 <!--form action="/action_page.php">
   <label for="fname">First name:</label>
